<resources>
    <string name="app_name">WeightOfRing</string>
    <string name="buttonRing">РАССЧИТАТЬ ВЕС КОЛЬЦА</string>
    <string name="buttonGem">РАССЧИТАТЬ ВЕС КАМНЯ</string>
    <string name="buttonGoldPrice">ЦЕНЫ НА МЕТАЛЛ</string>
    <string name="editTextSize">РАЗМЕР</string>
    <string name="editTextWidth">ШИРИНА</string>
    <string name="editTextThickness">ТОЛЩИНА</string>
    <string name="textViewTitleApp">ЮВЕЛИРНЫЙ КАЛЬКУЛЯТОР</string>
    <string name="textViewParameters">ВВЕДИТЕ ПАРАМЕТРЫ КОЛЬЦА</string>
    <string name="textViewParametersGem">ВВЕДИТЕ ПАРАМЕТРЫ КАМНЯ</string>
    <string name="radioButtonPlatinum">ПЛАТИНА</string>
    <string name="radioButtonGold999">AU 999</string>
    <string name="radioButtonGold750">AU 750</string>
    <string name="radioButtonGold585">AU 585</string>
    <string name="radioButtonSilver">СЕРЕБРО</string>
    <string name="europeanRing">ЕВРОПЕЙКА</string>
    <string name="classicRing">КЛАССИКА</string>
    <string name="ButtonResult">РАССЧИТАТЬ</string>
    <string name="ButtonList">РЕЗУЛЬТАТЫ</string>
    <string name="gram">gr</string>
    <string name="CutTextView">ОГРАНКА</string>
    <string name="DensityTextView">НАЗВАНИЕ</string>
    <string name="LengthTextView">ДЛИНА</string>
    <string name="WidthTextView">ШИРИНА</string>
    <string name="DepthTextView">ВЫСОТА</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="length_description">Введите вес вашей заготовки и диаметр фильеры, чтобы узнать длину готовой проволоки</string>
    <string name="diameter_description">Введите вес вашей заготовки и необходимую длину проволоки, чтобы узнать какой диаметр проволоки получится</string>
    <string name="weight_description">Введите необходимый диаметр и длину проволоки, чтобы узнать вес требуемой заготовки</string>

</resources>