<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintCalculateRing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:context=".CalculateRingFragment">

        <TextView
            android:id="@+id/textViewParameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/textViewParameters"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/exampleImage"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:src="@drawable/exampleimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewParameters" />

        <TextView
            android:id="@+id/textViewWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/editTextWidth"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextWidthRing"
            app:layout_constraintStart_toStartOf="@+id/editTextWidthRing"
            app:layout_constraintTop_toBottomOf="@id/exampleImage" />

        <TextView
            android:id="@+id/textViewSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/editTextSize"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextSizeRing"
            app:layout_constraintStart_toStartOf="@+id/editTextSizeRing"
            app:layout_constraintTop_toBottomOf="@id/exampleImage" />

        <TextView
            android:id="@+id/textViewThickness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/editTextThickness"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextThicknessRing"
            app:layout_constraintStart_toStartOf="@+id/editTextThicknessRing"
            app:layout_constraintTop_toBottomOf="@id/exampleImage" />

        <EditText
            android:id="@+id/editTextWidthRing"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:saveEnabled="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextSizeRing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWidth" />

        <EditText
            android:id="@+id/editTextSizeRing"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:saveEnabled="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSize" />

        <EditText
            android:id="@+id/editTextThicknessRing"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:saveEnabled="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextSizeRing"
            app:layout_constraintTop_toBottomOf="@+id/textViewThickness" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:checkedButton="@id/radioButtonGold585"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextWidthRing">

            <RadioButton
                android:id="@+id/radioButtonGold750"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:saveEnabled="false"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/radioButtonGold750"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="151dp"
                tools:layout_editor_absoluteY="385dp" />

            <RadioButton
                android:id="@+id/radioButtonGold585"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:saveEnabled="false"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/radioButtonGold585"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="151dp"
                tools:layout_editor_absoluteY="385dp" />

            <RadioButton
                android:id="@+id/radioButtonSilver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:saveEnabled="false"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/radioButtonSilver"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="151dp"
                tools:layout_editor_absoluteY="385dp" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonResult"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:text="@string/ButtonResult"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:text="Weight"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewResult"
            app:layout_constraintEnd_toStartOf="@+id/textViewResult"
            app:layout_constraintTop_toTopOf="@+id/textViewResult" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:maxEms="4"
            android:text="0.0"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonResult" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="gramms"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewResult"
            app:layout_constraintStart_toEndOf="@+id/textViewResult"
            app:layout_constraintTop_toTopOf="@+id/textViewResult" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>