<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateCarat">

    <TextView
        android:id="@+id/textViewParametersGem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/textViewParametersGem"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_margin="9dp"
        android:text="0.0"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonResultGem" />

    <Button
        android:id="@+id/buttonResultGem"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:background="#202020"
        android:text="@string/ButtonResult"
        android:textColor="#B3B3B3"
        android:textSize="40sp"
        app:iconTint="#C57777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depthEditText" />

    <Spinner
        android:id="@+id/densitySpinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonResultGem"
        app:layout_constraintTop_toBottomOf="@+id/cutSpinner" />

    <Spinner
        android:id="@+id/cutSpinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonResultGem"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewParametersGem"
        android:src="@drawable/rounddiamond" />

    <TextView
        android:id="@+id/cutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CutTextView"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/cutSpinner"
        app:layout_constraintEnd_toStartOf="@+id/cutSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cutSpinner" />

    <TextView
        android:id="@+id/densityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DensityTextView"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/densitySpinner"
        app:layout_constraintEnd_toStartOf="@+id/densitySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/densitySpinner" />

    <TextView
        android:id="@+id/lengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LengthTextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/lengthEditText"
        app:layout_constraintEnd_toStartOf="@+id/lengthEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lengthEditText" />

    <TextView
        android:id="@+id/widthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WidthTextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/widthEditText"
        app:layout_constraintEnd_toStartOf="@+id/widthEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/widthEditText" />

    <TextView
        android:id="@+id/depthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DepthTextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/depthEditText"
        app:layout_constraintEnd_toStartOf="@+id/depthEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/depthEditText" />

    <EditText
        android:id="@+id/lengthEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text=""
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonResultGem"
        app:layout_constraintTop_toBottomOf="@+id/densitySpinner" />

    <EditText
        android:id="@+id/widthEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text=""
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonResultGem"
        app:layout_constraintTop_toBottomOf="@+id/lengthEditText" />

    <EditText
        android:id="@+id/depthEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text=""
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonResultGem"
        app:layout_constraintTop_toBottomOf="@+id/widthEditText" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:text="carats"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewResult"
        app:layout_constraintStart_toEndOf="@+id/textViewResult"
        app:layout_constraintTop_toTopOf="@+id/textViewResult" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewResult"
        app:layout_constraintEnd_toStartOf="@+id/textViewResult"
        app:layout_constraintTop_toTopOf="@+id/textViewResult" />

    <TextView
        android:id="@+id/resultGemGrammTV"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="0.0"
        android:textAlignment="center"
        android:textColor="#B5B5B5"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:text="gramms"
        android:textColor="#B5B5B5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/resultGemGrammTV"
        app:layout_constraintStart_toEndOf="@+id/resultGemGrammTV"
        app:layout_constraintTop_toTopOf="@+id/resultGemGrammTV" />


</androidx.constraintlayout.widget.ConstraintLayout>