<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintStartFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".ui.fragments.start_fragment.StartFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/card_view"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/textViewTitleApp"
                android:textColor="@color/active_button"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewButtonRing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/card_view"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/active_button"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:layout_constraintStart_toEndOf="@id/imageViewButtonRing"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/buttonRing"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/buttonRing"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/imageViewButtonRing"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ring_button"
                    android:layout_margin="5dp"
                    android:alpha="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewButtonGem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/card_view"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewButtonRing">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/active_button"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageViewButtonGem">

                    <TextView
                        android:id="@+id/buttonGem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/buttonGem"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/imageViewButtonGem"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/gem_button"
                    android:layout_margin="5dp"
                    android:alpha="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewButtonPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/card_view"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewButtonGem">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/active_button"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:layout_constraintStart_toEndOf="@id/imageViewButtonPrice"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/buttonGoldPrice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/buttonGoldPrice"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/imageViewButtonPrice"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/price_button"
                    android:layout_margin="5dp"
                    android:alpha="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
